# planetarium

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: basic.yml  cosmos-sdk-basic.yml  cosmos-sdk-in-place.yml  cosmos-sdk-rolling.yml  gaia-basic.yml  gaia-in-place.yml  gaia-rolling.yml  in-place.yml  rolling.yml
app/: CMakeLists.txt  Dockerfile  build.sh.in  generate-source-fingerprint.sh.in  up-to-date.sh.in
cosmovisor/: CMakeLists.txt  Dockerfile  Dockerfile.in  build.sh.in
daemon/: CMakeLists.txt  Dockerfile  Dockerfile.in  build.sh.in  generate-source-fingerprint.sh  generate-source-fingerprint.sh.in  up-to-date.sh
fixture/: CMakeLists.txt  README.md
fixture/app/: CMakeLists.txt  prepare-apps.sh.in
fixture/chain/: CMakeLists.txt  cleanup-chains.sh  cleanup-nodes.sh.in  generate-compose.py.in  generate-inventory.py  setup-chain.sh.in  setup-chains.sh.in  setup-nodes.sh.in
fixture/daemon/: CMakeLists.txt  dummyd  prepare-daemons.sh.in
fixture/liveness/: CMakeLists.txt  restart-sentries.sh.in  scale-sentries.sh.in
fixture/runtime/: CMakeLists.txt  Dockerfile  Dockerfile.in  daemon.env.in  healthcheck.in  height.in  init  install-image.sh.in  setup  uninstall-image.sh.in
fixture/upgrade/: CMakeLists.txt
fixture/upgrade/in-place/: CMakeLists.txt  upgrade-chain.sh.in
fixture/upgrade/in-place/auto/: CMakeLists.txt
fixture/upgrade/in-place/manual/: CMakeLists.txt
fixture/upgrade/rolling/: CMakeLists.txt  upgrade-chain.sh.in
fixture/util/: common.sh  service.sh
playbook/: README.md  app.yml  blocksync.yml  config.yml  cosmovisor.yml  daemon.yml  genesis.yml  gentx.yml  initialize.yml  peers.yml  run.yml  upgrade.yml
playbook/inventory/: workers.yml
playbook/roles/app/defaults/: main.yml
playbook/roles/app/meta/: argument_specs.yml
playbook/roles/app/tasks/: work.yml
playbook/roles/app/templates/: configure.py.j2
playbook/roles/app/vars/: main.yml
playbook/roles/blocksync/meta/: argument_specs.yml
playbook/roles/blocksync/tasks/: main.yml
playbook/roles/config/tasks/: apply.yml  gather.yml  main.yml
playbook/roles/config/templates/: apply.sh.j2  gather.sh.j2
playbook/roles/cosmovisor/defaults/: main.yml
playbook/roles/cosmovisor/files/runit/etc/sv/cosmovisor/log/: config
playbook/roles/cosmovisor/meta/: argument_specs.yml
playbook/roles/cosmovisor/tasks/: main.yml
playbook/roles/cosmovisor/tasks/common/: absent.yml  latest.yml  present.yml
playbook/roles/cosmovisor/tasks/runit/: absent.yml  decision.yml  present.yml
playbook/roles/cosmovisor/templates/runit/etc/sv/cosmovisor/: run.j2
playbook/roles/cosmovisor/templates/runit/etc/sv/cosmovisor/log/: run.j2
playbook/roles/daemon/meta/: argument_specs.yml
playbook/roles/daemon/tasks/: main.yml  work.yml
playbook/roles/daemon/templates/: configure.sh.j2  height.j2  install.sh.j2
playbook/roles/genesis/defaults/: main.yml
playbook/roles/genesis/meta/: argument_specs.yml
playbook/roles/genesis/tasks/: collect-gentxs.yml  collect.yml  distribute.yml  generate.yml  main.yml  work.yml
playbook/roles/genesis/templates/: collect-gentx.sh.j2  collect-gentxs.sh.j2  generate-gentx.sh.j2  generate.sh.j2
playbook/roles/genesis2/defaults/: main.yml
playbook/roles/genesis2/meta/: argument_specs.yml
playbook/roles/genesis2/tasks/: collect-gentxs.yml  distribute-genesis.yml  generate-gentx.yml  main.yml
playbook/roles/genesis2/templates/: collect-gentxs.sh.j2  generate-gentx.sh.j2
playbook/roles/genesis_legacy/meta/: argument_specs.yml
playbook/roles/genesis_legacy/tasks/: collect.yml  distribute.yml  generate.yml  main.yml
playbook/roles/genesis_legacy/templates/: collect-gentx.sh.j2
playbook/roles/gentx/defaults/: main.yml
playbook/roles/gentx/meta/: argument_specs.yml
playbook/roles/gentx/tasks/: generate.yml  main.yml
playbook/roles/gentx/templates/: generate.sh.j2
playbook/roles/key/meta/: argument_specs.yml
playbook/roles/key/tasks/: main.yml
playbook/roles/key/templates/: add.sh.j2
playbook/roles/peers/meta/: argument_specs.yml
playbook/roles/peers/tasks/: main.yml
playbook/roles/peers/templates/: apply.py.j2  apply.sh.j2
playbook/roles/promotion/meta/: argument_specs.yml
playbook/roles/promotion/tasks/: main.yml
playbook/roles/promotion/templates/: create.sh.j2
playbook/roles/service/tasks/: main.yml
playbook/roles/service/tasks/runit/: started.yml
playbook/roles/upgrade/meta/: argument_specs.yml
playbook/roles/upgrade/tasks/: main.yml
test/: CMakeLists.txt  README.md
test/app/: prepare-apps.sh.in
test/app/dummy/: dummyd
test/chain/: CMakeLists.txt  README.md  cleanup-nodes.sh.in  generate-compose.py.in  generate-inventory.py  setup-chain.sh.in  setup-nodes.sh.in
test/ibc/: CMakeLists.txt
test/ibc/homo/: CMakeLists.txt  transfer.sh.in
test/internet/: CMakeLists.txt
test/liveness/: CMakeLists.txt  restart-sentries.sh.in  scale-sentries.sh.in
test/relayer/: CMakeLists.txt  Dockerfile  cleanup-nodes.sh.in  config.toml  setup-relayer.sh.in
test/runtime/: CMakeLists.txt  Dockerfile
test/sandbox/: CMakeLists.txt
test/sandbox/ibc/: CMakeLists.txt
test/sandbox/solo/: CMakeLists.txt
test/upgrade/: CMakeLists.txt
test/upgrade/in-place/: CMakeLists.txt  upgrade-chain.sh.in
test/upgrade/in-place/auto/: CMakeLists.txt
test/upgrade/in-place/manual/: CMakeLists.txt
test/upgrade/rolling/: CMakeLists.txt  upgrade-chain.sh.in
test/util/: app.sh  common.sh  relayer.sh  service.sh
util/: app.sh  common.sh  docker.sh
